// login.proto

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";

package com.example;

service UserLogin {
  rpc login(LoginRequest) returns (LoginReply);
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LoginReply {
  string access_token = 1;  // Corrected field name
  string userName = 2;
  int64 userId = 3;
}
